--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ anyhow = "1.0.100"
 clap = { version = "4.5.48", features = ["derive"] }
 env_logger = "0.11.8"
 log = "0.4.28"
-nix = { version = "0.30.1", features = ["mount","fs", "process", "signal"] }
+nix = { version = "0.30.1", features = ["mount", "fs", "process", "signal", "sched", "hostname", "user"] }
 thiserror = "2.0.17"
