--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ clap = { version = "4.5.48", features = ["derive"] }
 env_logger = "0.11.8"
 log = "0.4.28"
 nix = { version = "0.30.1", features = ["mount", "fs", "process", "signal", "sched", "hostname", "user","term"] }
+# signal-hook = "0.3.18"
 thiserror = "2.0.17"
